# Recording-SDK-API-Sample

./: IAgoraLinuxSdkCommon.h  IAgoraRecordingEngine.h  README.md  RecordingEngineImpl.cpp  RecordingEngineImpl.h  RecordingEngineImpl.hpp  main.cpp
RecordingSdkCommon/: publisher_connection_observer.cpp  publisher_connection_observer.hpp  publisher_localuser_observer.cpp  publisher_localuser_observer.hpp  subscriber_connection_observer.cpp  subscriber_connection_observer.hpp  subscriber_localuser_observer.cpp  subscriber_localuser_observer.hpp
common/: sample_local_user_observer.cpp  sample_local_user_observer.h
common/file_parser/: helper_aac_parser.cpp  helper_h264_parser.cpp
demo/agora_sdk_demo/: CMakeLists.txt  README.zh.md  agora_cache.db  build_android.sh  build_linux.sh  build_linux_demo.sh  sync-data.sh  sync-libs.sh  xdump_config
demo/agora_sdk_demo/rtsa_quick_start/: README(rtsa).md  README(rtsa).zh.md
demo/agora_sdk_demo/rtsa_quick_start/rtc/: video_encoded_image_receiver.cpp  video_encoded_image_receiver.h  video_frame_observer.cpp  video_frame_observer.h  video_frame_receiver.cpp  video_frame_receiver.h
demo/agora_sdk_demo/rtsa_quick_start/src/: CMakeLists.txt  rtsa_quick_start.cpp  rtsa_quick_start_dl.cpp
demo/agora_sdk_demo/rtsa_quick_start/utils/: I420_buffer.cpp  aligned_alloc.cpp  common_utils.h
demo/agora_sdk_demo/rtsa_quick_start/utils/file_parser/: aac_file_parser.cpp  audio_file_parser_factory.cpp  fixed_frame_length_audio_file_parser.cpp  h264_file_parser.cpp  h264_file_parser.h  video_file_parser_factory.cpp  video_file_parser_factory.h  wav_pcm_file_parser.cpp  yuv_file_parser.cpp  yuv_file_parser.h
demo/agora_sdk_demo/rtsa_quick_start/utils/file_parser/opus/: ogg_opus_file_parser.cpp  ogg_opus_file_parser.h
demo/agora_sdk_demo/rtsa_quick_start/wrapper/: audio_frame_handler_factory.cpp  audio_frame_observer.cpp  audio_frame_observer.h  audio_frame_sender.cpp  audio_pcm_puller.cpp  connection_wrapper.cpp  connection_wrapper.h  local_user_wrapper.cpp  local_user_wrapper.h  media_packet_receiver.cpp  media_packet_receiver.h  media_packet_sender.cpp  media_packet_sender.h  statistic_dump.cpp  utils.cpp  video_encoded_frame_receiver.cpp  video_encoded_frame_receiver.h  video_frame_sender.cpp  video_frame_sender.h
demo/agora_sdk_demo/rtsa_quick_start/wrapper_wrapper/: agora_media_transporter.cpp  media_data_receiver.cpp  media_data_receiver.h  media_data_sender.cpp  media_data_sender.h  media_send_task.cpp
demo/agora_sdk_demo/samples/: CMakeLists.txt
demo/agora_sdk_demo/samples/audio/: CMakeLists.txt  audio.cpp  playback.cpp  record.cpp
demo/agora_sdk_demo/samples/cloud_proxy/: CMakeLists.txt  sample_send_pcm_by_cloudProxy.cpp  set_proxy.sh
demo/agora_sdk_demo/samples/common/: helper.cpp  muxer_manager.cpp  muxer_manager.h  sample_common.cpp  sample_common.h  sample_connection_observer.cpp  sample_connection_observer.h  sample_local_user_observer.cpp  sample_local_user_observer.h  write_csvfile.cpp
demo/agora_sdk_demo/samples/default/: CMakeLists.txt  recorder_local.cpp  sample_receive_decrypted_h264.cpp  sample_receive_h264_pcm.cpp  sample_receive_mixed_audio.cpp  sample_receive_yuv_pcm.cpp  sample_send_aac.cpp  sample_send_encrypted_h264.cpp  sample_send_generic.cpp  sample_send_h264_dual_stream.cpp  sample_send_h264_multi_inst.cpp  sample_send_h264_pcm.cpp  sample_send_nvqsv.cpp  sample_send_receive_pcm_multi_inst.cpp  sample_send_yuv_pcm.cpp  sample_stringuid_receive.cpp  sample_stringuid_send.cpp
demo/agora_sdk_demo/samples/license/: CMakeLists.txt
demo/agora_sdk_demo/samples/license/tools/: CMakeLists.txt  license_activator.cpp  license_query.cpp
demo/agora_sdk_demo/toolchains/: x86_64.cmake
