cmake_minimum_required(VERSION 3.5)
project(GloudProxySamples)

# Build sample_receive_datastream_send_h264_pcm
#file(GLOB SAMPLE_CLOUD_PROXY_FILES
#     "${PROJECT_SOURCE_DIR}/sample_send_pcm_by_cloudProxy.cpp"
#     "${PROJECT_SOURCE_DIR}/../common/*.cpp")

#add_executable(
#     sample_send_pcm_by_cloudProxy
#  ${SAMPLE_CLOUD_PROXY_FILES})
